# HeuristicBoundaryEncoding

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/hbe/: mcmc.py
tests/: test_random_walk_sampler.py  test_smoke.py
