[project]
name = "heuristicboundaryencoding"
version = "0.1.0"
description = "An implementation of the heuristic boundary neural quantum state."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
cpu = ["torch"]
cu128 = ["torch"]
cu129 = ["torch"]
cu130 = ["torch"]

[dependency-groups]
dev = [
  "mypy>=1.14.0",
  "pre-commit>=4.0.0",
  "pytest>=8.0.0",
  "ruff>=0.9.0",
  "tox>=4.0.0",
]

[tool.uv]
package = true
conflicts = [
  [ { extra = "cpu" }, { extra = "cu128" }, { extra = "cu129" }, { extra = "cu130" } ],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu129", extra = "cu129" },
  { index = "pytorch-cu130", extra = "cu130" },
]
